Added more base autos, and testing pathplanner works with this code (also actually added previously non-added paths and autos to deploy directory)